minor spacing issue with mobile menu

--- a/cod-7.x-1.0-beta1/sites/all/themes/ccgd/css/ccgd.css
+++ b/cod-7.x-1.0-beta1/sites/all/themes/ccgd/css/ccgd.css
@@ -39,7 +39,7 @@ input.form-submit:hover, a.button:hover {
 /* -- Layout -- */
 
 #page-wrapper, #page, #main-wrapper { background: none; }
-#header { background: #fff; }
+#header { background: #fff; min-height: 64px;}
 #page-wrapper { background-color: #70a3eb; }
 #main #content { background: #fff; display: inline-block; width: 100%; }
 #main #content .panel-panel.header { display: none; }
@@ -55,7 +55,7 @@ input.form-submit:hover, a.button:hover {
 #logo {
   padding: 15px 15px 15px 0; /* LTR */
   margin-left: 10px;
-  width: 80%;
+  width: 75%;
   height: auto;
   position: relative;
 }
@@ -64,7 +64,7 @@ input.form-submit:hover, a.button:hover {
 
 #main-menu { clear: none; float: right; }
 #main-menu h2 { display: none; }
-#main-menu #main-menu-links li { float: left; width: auto; margin-right: 5px; display: block; }
+#main-menu #main-menu-links li { float: left; width: auto; display: block; margin-right: 0; }
 #main-menu ul li a { color: #b7b9bb; text-transform: uppercase; font-weight: bold; text-shadow: none; font-size: 1.1em; height: 24px; line-height: 24px; padding: 20px 6px; display: inline-block; white-space: nowrap; display: block; }
 #main-menu ul li a:hover, #main-menu ul li a:focus { color: #70a3eb; }
 a#menu-toggle { background-color: #70a3eb; overflow: hidden; text-indent: -99999px; width: 42px; height: 32px; position: absolute; top: 6px; right: 8px; }
@@ -136,7 +136,7 @@ visibility: hidden;
   #header { background: #fff; }
   #logo { width: auto; padding-top: 20px;}
   #logo img { width: 300px; }
-  #main-menu #main-menu-links li { display: inline-block; }
+  #main-menu #main-menu-links li { display: inline-block; margin-right: 5px; }
   #main-menu #main-menu-links li a { display: inline-block; height: 64px; line-height: 64px; padding: 0 4px; }
   .front .node-event form .description  { float: right; width: 40%; position: relative; top: -20px; }
   .front .node-event form input.form-text,
@@ -152,7 +152,7 @@ visibility: hidden;
   #block-system-main .right { width: 37%; }
   #header { background: #fff; }
   #logo { width: auto; }
-  #main-menu #main-menu-links li { display: inline-block; }
+  #main-menu #main-menu-links li { display: inline-block; margin-right: 5px; }
   #main-menu #main-menu-links li a { font-size: 1.2em; display: inline-block; height: 64px; line-height: 64px; padding: 0; padding: 0 9px; }
   .front .node-event form .description  { float: right; width: 40%; position: relative; top: -14px; }
   .front .node-event form input.form-text,
@@ -170,7 +170,7 @@ visibility: hidden;
   #main-menu #main-menu-links li a:hover { background-color: #dadbdd; color: #70a3eb; }
   #main-menu #main-menu-links li.active a { background-color: #dadbdd; color: #70a3eb; }
   a#menu-toggle { display:block; }
-  #main-menu-links { display: none; height: auto; text-align: center; clear: both; }
+  #main-menu-links { display: none; height: auto; text-align: center; clear: both; padding-top: 8px; }
 }
 
 /* -- Main wrapper -- */
